# rinha-de-backend-2024-q1

participantes/rdenadai_python/: Dockerfile  INSTALL.md  README.md  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
participantes/rdenadai_python/config/: init.sql  nginx.conf  postgresql.conf
participantes/rdenadai_python/src/: app.py  db.py  entrypoint.sh  orjson_response.py  schemas.py  stmt.py
participantes/rdenadai_rust/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
participantes/rdenadai_rust/config/: postgresql.conf
participantes/rdenadai_rust/src/: main.rs
participantes/rdenadai_rust/src/routes/: index.rs  mod.rs  register.rs
participantes/rdenadai_rust/src/schemas/: account_statement.rs  health_check.rs  mod.rs  transaction.rs
