[package]
name = "rdenadai_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
serde_with = { version = "2.0.0", features = ["chrono_0_4"] }
chrono = { version = "0.4.26", features = ["serde"] }
actix-web = "4"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "chrono",
] }
